--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,9 +2,44 @@
 $font-stack:    Helvetica, sans-serif;
 $primary-color: white;
 $background-color: rgb(60, 60, 60);
+pre {
+    overflow-x: auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+    margin-left: 100px;
+    margin-right: 100px;
+    text-align: justify;
+    text-justify: inter-word;
+    font: 130% Monospace;
+}
+
+code.text {
+    font: 130% Monospace;
+}
+
+ul {
+    margin: 0px;
+}
+
+p {
+    text-align: justify;
+    text-justify: inter-word;
+    // margin-left: 100px;
+    // margin-right: 100px;
+}
+
+div.post-body {
+    text-align: justify;
+    text-justify: inter-word;
+    margin-left: 100px;
+    margin-right: 100px;
+}
 
 body {
-    font: 200% $font-stack;
+    font: 100% $font-stack;
     background-color: $background-color;
     color: $primary-color;
 }
