--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -61,3 +61,12 @@ pre.numblock{
 .highlight {
   color: var(--main-txt-color);
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  height: auto;
+}
+
